--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,11 +30,11 @@ jobs:
         run: sudo apt update
 
       # Runs a set of commands using the runners shell
-      - name: Install curl
-        run: sudo apt install curl
+      - name: Install wget
+        run: sudo apt install wget
         
       - name: Download a latest datebase ClamAV
-        run: curl https://database.clamav.net/main.cvd -o main.cvd
+        run: wget --user-agent='CVDUPDATE/0 (43fde49b-905f-43c6-a51b-e1324cd23280)' https://database.clamav.net/main.cvd
         
-      - name: upload build
+      - name: pwd
         run: pwd
